force-app/main/default/objects/Program_Enrollment__c/Program_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Program Enrollment</label>
    <nameField>
        <displayFormat>PE-{0000000}</displayFormat>
        <label>Program Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>