force-app/main/default/objects/Program_Enrollment__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(NOT( ISBLANK(Account__r.BillingStreet)), Account__r.BillingStreet+ &apos;, &apos;, &apos;&apos;) + Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>