force-app/main/default/objects/Program_Enrollment__c/fields/Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivation_Reason__c</fullName>
    <label>Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered in error</fullName>
            </value>
            <value>
                <fullName>No longer active in this role</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>