force-app/main/default/objects/Program_Enrollment__c/fields/Enrollment_Icon__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Icon__c</fullName>
    <formula>IMAGE(&quot;/resource/icons/approval/&quot;&amp; 
CASE(Status__c,&apos;Active&apos;, &apos;Approved&apos;, &apos;Rejected&apos;) 
&amp;&quot;.png&quot;, Status__c, 24, 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Icon</label>
    <type>Text</type>
</CustomField>