force-app/main/default/objects/Program_Enrollment__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Box</fullName>
            </value>
            <value>
                <fullName>Construction and Demolition Waste</fullName>
            </value>
            <value>
                <fullName>IC&amp;I Printed Paper &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Municipal Hazardous or Special Waste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>