force-app/main/default/objects/Program_Enrollment__c/fields/PRO_Account__c.field-meta.xml
<CustomField>
    <fullName>PRO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRO Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (PRO Account)</relationshipLabel>
    <relationshipName>Program_Enrollments_PRO</relationshipName>
    <type>Lookup</type>
</CustomField>