force-app/main/default/objects/Program_Enrollment__c/fields/PRO_Account_Active__c.field-meta.xml
<CustomField>
    <fullName>PRO_Account_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRO Account (Active)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Enrollments (PRO Account (Active))</relationshipLabel>
    <relationshipName>Program_Enrollments2</relationshipName>
    <type>Lookup</type>
</CustomField>