force-app/main/default/objects/Program_Enrollment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producer</fullName>
            </value>
            <value>
                <fullName>Collector</fullName>
            </value>
            <value>
                <fullName>Hauler</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Retreader</fullName>
            </value>
            <value>
                <fullName>PRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>