force-app/main/default/objects/Program_Enrollment__c/fields/showTab__c.field-meta.xml
<CustomField>
    <fullName>showTab__c</fullName>
    <formula>BLANKVALUE(End_Date__c, TODAY()) &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>showTab</label>
    <type>Checkbox</type>
</CustomField>