force-app/main/default/objects/Program_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(BLANKVALUE(End_Date__c, TODAY() + 1) &gt; TODAY(), &apos;Active&apos;, &apos;Inactive&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>