force-app/main/default/objects/Program_Enrollment__c/validationRules/End_Date_must_be_greater_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_greater_than_Start_Date</fullName>
    <active>true</active>
    <description>End Date must be greater than Start Date</description>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be greater than Start Date</errorMessage>
</ValidationRule>